--- a/notebook/show_data.ipynb
+++ b/notebook/show_data.ipynb
@@ -15,6 +15,7 @@
     "from src.datasets.coco import CocoDetection\n",
     "from src.utils.collate_fn_coco import collate_fn_coco\n",
     "from src.utils.get_model_and_data import get_model_and_data\n",
+    "from src.datasets.get_\n",
     "import clip\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
